Polish routine domain and validations